--- a/app/html/index.html
+++ b/app/html/index.html
@@ -4,12 +4,12 @@
   <div class="site">
     @include('components/_header.html')
     <main>
-      @include('components/_hero.html')
+      <!-- @include('components/_hero.html')
       @include('components/_about.html')
       @include('components/_project.html')
-         @include('components/_contacts.html')
+         @include('components/_contacts.html') -->
     </main>
-    @include('components/_footer.html')
+    <!-- @include('components/_footer.html') -->
 
   </div>
 
