--- a/app/index.html
+++ b/app/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Студия “High pass”</title>
+    <title>Portfolio MB</title>
 
     <script src="https://api-maps.yandex.ru/2.1/?apikey=76d10f3a-6594-4483-8620-1091358b4d14&lang=ru_RU"></script>
 
@@ -14,13 +14,23 @@
 
     <link rel="stylesheet" href="css/style.css" />
   </head>
+</html>
 
-  <body>
-    <div class="site">
-      <header id="header" class="header">
-        <div class="container"></div>
-      </header>
-      <main></main>
-    </div>
-  </body>
+
+<body>
+  <div class="site">
+    <header id="header" class="header">
+  <div class="container">
+
+  </div>
+</header>
+    <main>
+      
+    </main>
+    
+
+  </div>
+
+</body>
+
 </html>
