--- a/app/index.html
+++ b/app/index.html
@@ -20,10 +20,9 @@
 <body>
   <div class="site">
     <header id="header" class="header">
-  <div class="container">
-
-  </div>
+  <div class="container"></div>
 </header>
+
     <main>
       
     </main>
